--- a/app/src/main/res/drawable/customspinner.xml
+++ b/app/src/main/res/drawable/customspinner.xml
@@ -5,7 +5,7 @@
         <item><shape>
             <gradient android:angle="90" android:endColor="#B3BBCC" android:startColor="#E8EBEF" android:type="linear" />
 
-            <stroke android:width="1dp" android:color="#ff2632" />
+            <stroke android:width="1dp" android:color="@color/colorPrimary" />
 
             <corners android:radius="4dp" />
 
