--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -3,81 +3,205 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.chahat.anotode.AddNotesActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="title"
-        android:layout_marginTop="5dp">
 
-        <android.support.design.widget.TextInputEditText
+    <android.support.v7.widget.Toolbar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/clearrrrrbutton"
+        android:background="@color/colorPrimary"
+        android:id="@+id/toolbar"
+        >
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:orientation="horizontal"
+        android:id="@+id/icon_layout"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="10dp">
+
+        <ImageView
+            android:id="@+id/icon_title"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/notepad"/>
+
+        <ImageView
+            android:id="@+id/icon_tag"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginLeft="45dp"
+            android:src="@drawable/tag"/>
+
+        <ImageView
+            android:id="@+id/icon_category"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="45dp"
+            android:src="@drawable/category"/>
+
+        <ImageView
+            android:id="@+id/icon_note"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="45dp"
+            android:src="@drawable/note"/>
+
+
+    </LinearLayout>
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
+    android:layout_below="@+id/icon_layout">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       >
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="25dp"
+            android:id="@+id/tv_title"/>
+
+        <EditText
             android:id="@+id/input_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:layout_alignLeft="@+id/tv_title"
+            android:layout_below="@+id/tv_title"
+            android:layout_marginRight="10dp"
+             />
 
-            android:paddingTop="30dp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_notes"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="notes"
-        android:layout_below="@+id/input_layout_title"
-        android:layout_marginTop="5dp">
+        android:text="Note"
+        android:textColor="@android:color/black"
+        android:layout_below="@+id/et_category"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:id="@+id/tv_notes"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/input_notes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-
-            android:paddingTop="30dp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_tag"
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="tag"
-        android:layout_below="@+id/input_layout_notes"
-        android:layout_marginTop="5dp">
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/input_notes"
+        android:layout_below="@+id/tv_notes"
+        android:layout_alignLeft="@+id/tv_notes"
+        android:layout_marginRight="10dp"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/input_tag"
-            android:layout_width="match_parent"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tag"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:id="@+id/tv_tag"
+        android:layout_below="@+id/input_title" />
+
+        <EditText
+            android:id="@+id/input_tag1"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:layout_below="@+id/tv_tag"
+            android:layout_alignLeft="@+id/tv_tag"
+            android:layout_marginRight="10dp"
+            />
 
-            android:paddingTop="30dp" />
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/input_tag2"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:layout_below="@+id/tv_tag"
+                android:layout_toRightOf="@+id/input_tag1"
+                android:layout_marginRight="10dp"
+                />
+
+            <EditText
+                android:id="@+id/input_tag3"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:layout_below="@+id/input_tag1"
+                android:layout_alignLeft="@+id/input_tag1"
+                android:layout_marginRight="10dp"
+                />
+
+            <EditText
+                android:id="@+id/input_tag4"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:layout_below="@+id/input_tag2"
+                android:layout_toRightOf="@+id/input_tag3"
+                android:layout_alignLeft="@+id/input_tag2"
+                android:layout_marginRight="10dp"
+                />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Category"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:id="@+id/tv_category"
+        android:layout_below="@+id/input_tag3" />
+
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp"
+        android:layout_alignLeft="@+id/input_tag1"
+        android:layout_below="@+id/tv_category"
+        android:layout_marginTop="10dp"
         android:background="@drawable/customspinner"
-
+        android:layout_marginRight="10dp"
         />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/ic_done_black"
-        android:layout_marginTop="20dp"/>
+            <EditText
+                android:id="@+id/et_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/spinner"
+                android:layout_alignLeft="@+id/spinner"
+                android:hint="enter new category"
+                android:visibility="gone"
+                android:layout_marginTop="10dp"
+                />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
+
+
+
 
 
 </RelativeLayout>
