--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -3,26 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.chahat.anotode.LogInActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+android:background="@drawable/login"
+    tools:context="com.example.chahat.anotode.LogInActivity"
+    >
+<!--
+    <android.support.v7.widget.Toolbar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/clearrrrrbutton"
+        android:background="@color/colorPrimary"
+        android:id="@+id/toolbar"
+       >
+    </android.support.v7.widget.Toolbar>-->
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login to Anotode"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:textColor="@color/colorPrimary"
+        android:id="@+id/textView"
+        android:layout_marginTop="87dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_email"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:layout_below="@+id/input_layout_username"
-        android:layout_marginTop="5dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="200dp">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-
+            android:gravity="center"
             android:paddingTop="30dp" />
     </android.support.design.widget.TextInputLayout>
 
@@ -30,9 +54,12 @@
         android:id="@+id/input_layout_password"
         android:layout_below="@+id/input_layout_email"
         android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
+        android:layout_marginLeft="50dp"
+        android:layout_width="270dp"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:hint="Password"
+        app:passwordToggleEnabled="false"
         >
 
         <android.support.design.widget.TextInputEditText
@@ -40,19 +67,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:gravity="center"
             android:paddingTop="30dp"
+
             />
     </android.support.design.widget.TextInputLayout>
 
     <Button android:id="@+id/btn_login"
-        android:layout_width="fill_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="LogIn"
         android:background="@color/colorPrimary"
-        android:layout_below="@+id/input_layout_password"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="39dp"
         android:textColor="@android:color/white"
-        />
+        android:layout_below="@+id/input_layout_password"
+        android:layout_alignStart="@+id/input_layout_password"/>
 
 
 </RelativeLayout>
