--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,40 +3,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.chahat.anotode.SignUpActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.chahat.anotode.SignUpActivity"
+    android:background="@drawable/signup">
+
+   <!-- <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar"
+        android:background="@color/colorPrimary"
+        app:navigationIcon="@drawable/clearrrrrbutton"
+
+        ></android.support.v7.widget.Toolbar>-->
+
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_username"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:hint="Username"
-        android:layout_marginTop="5dp">
+        android:layout_below="@+id/imageButton"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="50dp">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:gravity="center"
             android:paddingTop="30dp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_email"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:hint="Email"
         android:layout_below="@+id/input_layout_username"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="50dp">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
+            android:gravity="center"
 
             android:paddingTop="30dp" />
     </android.support.design.widget.TextInputLayout>
@@ -45,9 +58,11 @@
         android:id="@+id/input_layout_password"
         android:layout_below="@+id/input_layout_email"
         android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
         android:hint="Password"
+        app:passwordToggleEnabled="false"
         >
 
         <android.support.design.widget.TextInputEditText
@@ -55,19 +70,56 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:gravity="center"
             android:paddingTop="30dp"
+
+
             />
     </android.support.design.widget.TextInputLayout>
 
     <Button android:id="@+id/btn_signup"
-        android:layout_width="fill_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="SignUp"
         android:background="@color/colorPrimary"
-        android:layout_below="@+id/input_layout_password"
-        android:layout_marginTop="40dp"
         android:textColor="@android:color/white"
+        android:layout_below="@+id/input_layout_password"
+        android:layout_alignStart="@+id/input_layout_password"
+        android:layout_marginTop="50dp"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageButton"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/fabtyperoundbutton"
+        app:border_color="@color/white"
+        app:border_width="3dp" />
+
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Profile Picture"
+        android:textColor="@android:color/black"
+        android:id="@+id/textView"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
+
+    <ProgressBar
+        android:id="@+id/loading_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:visibility="gone"/>
 
 
 
