--- a/app/src/main/res/layout/highlight.xml
+++ b/app/src/main/res/layout/highlight.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
-    android:paddingTop="0dp">
+    android:paddingTop="0dp"
+    >
 
 
 
@@ -29,65 +30,173 @@
             android:id="@+id/tv_time"
             android:layout_alignParentEnd="true"/>
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="url:"
             android:id="@+id/tv_url"
-            android:layout_below="@+id/tv_time"/>
+            android:layout_below="@+id/tv_time"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_toRightOf="@+id/icon_url"/>
+
+            <ImageView
+                android:id="@+id/icon_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/file"
+                android:layout_below="@+id/tv_url"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="3dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="title:"
                 android:id="@+id/tv_title"
-                android:layout_below="@+id/tv_url"/>
+                android:layout_below="@+id/tv_url"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="3dp"
+                android:layout_toRightOf="@+id/icon_title"/>
+
+            <ImageView
+                android:id="@+id/icon_note"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/notepad"
+                android:layout_below="@+id/tv_title"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="3dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Highlight:"
+                android:text="title:"
                 android:id="@+id/tv_highlight"
-                android:layout_below="@+id/tv_title"/>
+                android:layout_below="@+id/tv_title"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:maxLength="50"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="3dp"
+                android:layout_toRightOf="@+id/icon_title"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Comment:"
-                android:id="@+id/tv_comment"
-                android:layout_below="@+id/tv_highlight"/>
 
             <Button
-                android:id="@+id/bt_tag"
-                style="?android:attr/backgroundTint"
+                android:id="@+id/bt_tag1"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_highlight"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="10dp"
+                android:enabled="false"
+                android:background="@drawable/round"
+                />
+
+            <Button
+                android:id="@+id/bt_tag2"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_highlight"
+                android:layout_toRightOf="@+id/bt_tag1"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="10dp"
+                android:enabled="false"
+                android:background="@drawable/roundtag2"
+                />
+
+            <Button
+                android:id="@+id/bt_tag3"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_highlight"
+                android:layout_toRightOf="@+id/bt_tag2"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="10dp"
+                android:enabled="false"
+                android:background="@drawable/roundtag3"
+                />
+
+            <Button
+                android:id="@+id/bt_tag4"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_highlight"
+                android:layout_toRightOf="@+id/bt_tag3"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="10dp"
+                android:enabled="false"
+                android:background="@drawable/roundtag4"
+                />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tag"
-                android:textColor="@android:color/black"
-                android:layout_below="@+id/tv_comment"
-                android:enabled="false"
-                android:background="@color/colorPrimary"
+                android:text="Read More"
+                android:id="@+id/tv_readmore"
+                android:textStyle="bold"
+                android:layout_below="@+id/bt_tag1"
+                android:layout_toRightOf="@+id/bt_category"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
                 />
 
             <Button
                 android:id="@+id/bt_category"
-                style="?android:attr/backgroundTint"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="category"
-                android:textColor="@android:color/black"
-                android:layout_below="@+id/tv_comment"
-                android:layout_toRightOf="@+id/bt_tag"
-                android:layout_marginLeft="20dp"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_alignLeft="@+id/bt_tag1"
+                android:layout_below="@+id/bt_tag1"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
                 android:enabled="false"
-                android:background="@color/colorPrimary"
-                />
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:background="@drawable/roundcategory" />
 
 
 
         </RelativeLayout>
 
         </android.support.v7.widget.CardView>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/card_view"
+        android:background="@android:color/darker_gray"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/view"
+        android:layout_marginBottom="13dp"
+        android:background="@android:color/darker_gray"/>
+
 
 
 
