--- a/app/src/main/res/layout/highlight_fragment.xml
+++ b/app/src/main/res/layout/highlight_fragment.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/white">
+
+<android.support.v4.widget.SwipeRefreshLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    android:paddingBottom="0dp">
+
+
+    android:id="@+id/swipRefreshLayout">
 
 
     <android.support.v7.widget.RecyclerView
@@ -14,10 +20,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="top"
-        android:layout_marginTop="0dp"
        >
     </android.support.v7.widget.RecyclerView>
 
 
 
-</RelativeLayout>
+
+
+</android.support.v4.widget.SwipeRefreshLayout>
+
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No Highlights\n\nUSe Anotode chrome extension for highlighting text"
+        android:gravity="center"
+        android:layout_marginTop="15dp"
+        android:visibility="gone"
+        />
+
+
+</android.support.design.widget.CoordinatorLayout>
