--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -7,12 +7,13 @@
 
 
 
+
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         card_view:cardCornerRadius="2dp"
         >
 
@@ -27,52 +28,166 @@
                 android:id="@+id/tv_time"
                 android:layout_alignParentEnd="true"/>
 
+            <ImageView
+                android:id="@+id/icon_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/file"
+                android:layout_below="@+id/tv_time"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="3dp"/>
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="title:"
                 android:id="@+id/tv_title"
-                android:layout_below="@+id/tv_time"/>
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:layout_below="@+id/tv_time"
+                android:layout_toRightOf="@+id/icon_title"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="3dp"/>
+
+            <ImageView
+                android:id="@+id/icon_notes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/note"
+                android:layout_below="@+id/icon_title"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="3dp"/>
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Highlight:"
+                android:text="title:"
                 android:id="@+id/tv_notes"
-                android:layout_below="@+id/tv_title"/>
+                android:maxLength="50"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:layout_below="@+id/tv_title"
+                android:layout_toRightOf="@+id/icon_notes"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="3dp"/>
 
 
             <Button
-                android:id="@+id/bt_tag"
-                style="?android:attr/backgroundTint"
+                android:id="@+id/bt_tag1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="Tag"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
                 android:layout_below="@+id/tv_notes"
                 android:enabled="false"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/round"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="20dp"
                 />
+
+            <Button
+                android:id="@+id/bt_tag2"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="Tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_notes"
+                android:enabled="false"
+                android:layout_toRightOf="@+id/bt_tag1"
+                android:background="@drawable/roundtag2"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="20dp"
+                />
+
+            <Button
+                android:id="@+id/bt_tag3"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="Tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_notes"
+                android:enabled="false"
+                android:layout_toRightOf="@+id/bt_tag2"
+                android:background="@drawable/roundtag3"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="20dp"
+                />
+
+            <Button
+                android:id="@+id/bt_tag4"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="Tag"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_notes"
+                android:enabled="false"
+                android:layout_toRightOf="@+id/bt_tag3"
+                android:background="@drawable/roundtag4"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="20dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Read More"
+                android:id="@+id/tv_readmore"
+                android:textStyle="bold"
+                android:layout_alignTop="@+id/bt_category"
+               android:layout_toRightOf="@+id/bt_category"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+
+                />
+
 
             <Button
                 android:id="@+id/bt_category"
-                style="?android:attr/backgroundTint"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="category"
-                android:textColor="@android:color/black"
-                android:layout_below="@+id/tv_notes"
-                android:layout_toRightOf="@+id/bt_tag"
-                android:layout_marginLeft="20dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:background="@drawable/roundcategory"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:layout_alignLeft="@+id/bt_tag1"
+                android:layout_below="@+id/bt_tag1"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="20dp"
                 android:enabled="false"
-                android:background="@color/colorPrimary"
                 />
+
 
 
 
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="13dp"
+            android:background="@android:color/darker_gray"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="13dp"
+            android:background="@android:color/darker_gray"/>
+
+
 
 
 
