--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_movie"
+            android:src="@drawable/ic_border_color_black_24dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             />
