--- a/app/src/main/res/layout/welcome_slide4.xml
+++ b/app/src/main/res/layout/welcome_slide4.xml
@@ -13,9 +13,9 @@
         android:background="@color/bg_screen4"
         >
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_travel"
+            android:src="@drawable/ic_save_black_24dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             />
