--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -135,6 +135,7 @@
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:hint="Optional"
                 android:layout_below="@+id/tv_tag"
                 android:layout_toRightOf="@+id/input_tag1"
                 android:layout_marginRight="10dp"
@@ -145,6 +146,7 @@
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:hint="Optional"
                 android:layout_below="@+id/input_tag1"
                 android:layout_alignLeft="@+id/input_tag1"
                 android:layout_marginRight="10dp"
@@ -156,6 +158,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:layout_below="@+id/input_tag2"
+                android:hint="Optional"
                 android:layout_toRightOf="@+id/input_tag3"
                 android:layout_alignLeft="@+id/input_tag2"
                 android:layout_marginRight="10dp"
