--- a/app/src/main/res/layout/activity_change_pwd.xml
+++ b/app/src/main/res/layout/activity_change_pwd.xml
@@ -14,11 +14,21 @@
         app:navigationIcon="@drawable/clearrrrrbutton"
         />
 
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:background="@android:color/white"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp">
+
     <TextView
         android:id="@+id/tv_oldpwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
         android:text="Please enter your old Password"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
@@ -50,6 +60,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_newpwd"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp"
+        />
+
+        </RelativeLayout>
+
+
+
 
 </RelativeLayout>
