--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -14,11 +14,20 @@
         app:navigationIcon="@drawable/clearrrrrbutton"
         />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/white">
+
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
         android:text="Please enter your new Username"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
@@ -30,6 +39,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_username"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
