--- a/app/src/main/res/layout/activity_highlight_edit.xml
+++ b/app/src/main/res/layout/activity_highlight_edit.xml
@@ -94,7 +94,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/tag"
         android:layout_below="@+id/icon_title"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="28dp"
         android:layout_marginLeft="10dp"/>
 
     <EditText
@@ -116,6 +116,7 @@
        android:layout_below="@+id/icon_title"
        android:layout_toRightOf="@+id/et_tag1"
        android:layout_marginLeft="10dp"
+       android:hint="Optional"
        android:layout_marginTop="22dp"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/icon_tag"
@@ -126,6 +127,7 @@
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_tag1"
+       android:hint="Optional"
       android:layout_alignLeft="@+id/et_tag1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
@@ -138,6 +140,7 @@
        android:layout_below="@+id/et_tag2"
        android:layout_toRightOf="@+id/et_tag3"
        android:layout_alignLeft="@+id/et_tag2"
+       android:hint="Optional"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />
@@ -210,7 +213,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/notepad"
         android:layout_below="@id/view"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"/>
 
     <TextView
@@ -220,7 +223,7 @@
         android:text="Highlight"
         android:layout_below="@+id/view"
         android:layout_toRightOf="@+id/icon_highlight"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"/>
 
     <TextView
@@ -230,7 +233,7 @@
         android:text="SHOW DETAILS"
         android:layout_below="@+id/view"
         android:layout_toRightOf="@+id/tv_highlight"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="140dp"
         android:layout_alignRight="@+id/et_comment"
         android:textColor="@color/colorPrimary"/>
@@ -240,7 +243,7 @@
         android:layout_height="2dp"
         android:background="@android:color/black"
         android:layout_below="@id/icon_highlight"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="10dp"/>
 
   </RelativeLayout>
 
