--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:hint="Username"
         android:layout_below="@+id/imageButton"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:layout_marginLeft="50dp">
 
         <android.support.design.widget.TextInputEditText
@@ -93,7 +93,7 @@
         android:layout_height="120dp"
         android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/fabtyperoundbutton"
         app:border_color="@color/white"
         app:border_width="3dp" />
@@ -118,8 +118,17 @@
         android:indeterminateTint="@color/colorPrimary"
         android:layout_alignTop="@+id/imageButton"
         android:layout_centerHorizontal="true"
+        android:visibility="gone"
         android:layout_marginTop="50dp"
-        android:visibility="gone"/>
+        />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/google_button"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_signup"
+        android:layout_alignStart="@+id/btn_signup"
+        android:layout_marginTop="20dp"/>
 
 
 
