--- a/app/src/main/res/layout/highlight_fragment.xml
+++ b/app/src/main/res/layout/highlight_fragment.xml
@@ -33,7 +33,7 @@
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No Highlights\n\nUSe Anotode chrome extension for highlighting text"
+        android:text="No Highlights\n\nUse Anotode chrome extension for highlighting text"
         android:gravity="center"
         android:layout_marginTop="15dp"
         android:visibility="gone"
