--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -30,6 +30,7 @@
         />
 
 
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,14 +41,21 @@
         android:layout_marginLeft="10dp"
         />
 
+    <RelativeLayout
+        android:id="@+id/rr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_title"
+        android:layout_toRightOf="@+id/tag_icon"
+        >
+
+
     <Button
         android:id="@+id/tag_button1"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:text="tag"
         android:enabled="false"
-        android:layout_toRightOf="@+id/tag_icon"
-        android:layout_below="@+id/detail_title"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round"
@@ -62,7 +70,6 @@
         android:text="tag"
         android:enabled="false"
         android:layout_toRightOf="@+id/tag_button1"
-        android:layout_below="@+id/detail_title"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundtag2"
@@ -77,7 +84,6 @@
         android:text="tag"
         android:enabled="false"
         android:layout_toRightOf="@+id/tag_button2"
-        android:layout_below="@+id/detail_title"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundtag3"
@@ -85,26 +91,43 @@
         android:textStyle="bold"
         />
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rrr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rr"
+        android:layout_alignLeft="@+id/rr"
+        android:layout_marginLeft="20dp">
+
     <Button
         android:id="@+id/tag_button4"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:text="tag"
         android:enabled="false"
-        android:layout_below="@+id/tag_button1"
-       android:layout_alignLeft="@+id/tag_button1"
         android:layout_marginTop="16dp"
         android:background="@drawable/roundtag4"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         />
 
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:id="@+id/rrrr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rrr">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/category"
         android:id="@+id/category_icon"
-        android:layout_below="@+id/tag_button4"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         />
@@ -116,9 +139,8 @@
         android:text="category"
         android:enabled="false"
         android:layout_toRightOf="@+id/category_icon"
-        android:layout_below="@+id/tag_button4"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_alignBottom="@+id/category_icon"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:background="@drawable/roundcategory"
@@ -126,11 +148,20 @@
         android:textStyle="bold"
         />
 
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:id="@+id/rrrrr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rrrr">
+
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/category_button"
         android:layout_marginTop="30dp"
         android:background="@android:color/black"/>
 
@@ -173,6 +204,8 @@
         android:layout_below="@id/tv_notes"
         android:layout_marginTop="15dp"
         android:background="@android:color/black"/>
+
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
