--- a/app/src/main/res/layout/activity_notes_edit.xml
+++ b/app/src/main/res/layout/activity_notes_edit.xml
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/tag"
-        android:layout_below="@+id/icon_title"
+        android:layout_below="@+id/et_title"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="10dp"/>
 
@@ -96,7 +96,6 @@
                 android:layout_toRightOf="@+id/et_tag1"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="27dp"
-                android:hint="Optional"
                 android:layout_marginRight="10dp"
                 android:layout_alignBottom="@+id/icon_tag"
                 />
@@ -108,7 +107,6 @@
                 android:layout_below="@+id/et_tag1"
                 android:layout_alignLeft="@+id/et_tag1"
                 android:layout_marginTop="27dp"
-                android:hint="Optional"
                 android:layout_marginRight="10dp"
 
                 />
@@ -118,7 +116,6 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/et_tag1"
-                android:hint="Optional"
                 android:layout_alignLeft="@+id/et_tag2"
                 android:layout_marginTop="27dp"
                 android:layout_marginRight="10dp"
