--- a/app/src/main/res/layout/activity_change_pwd.xml
+++ b/app/src/main/res/layout/activity_change_pwd.xml
@@ -34,35 +34,51 @@
         android:layout_marginLeft="10dp"
         android:textSize="15sp"/>
 
-    <EditText
+   <android.support.design.widget.TextInputLayout
+       android:id="@+id/input_layout_passwordold"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_below="@+id/tv_oldpwd"
+       android:layout_marginLeft="10dp"
+       android:layout_marginTop="10dp">
+
+    <android.support.design.widget.TextInputEditText
         android:id="@+id/et_oldpwd"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_oldpwd"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"/>
+        />
+
+   </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:id="@+id/tv_newpwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_oldpwd"
+        android:layout_below="@+id/input_layout_passwordold"
         android:text="Please enter your new Password"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:textSize="15sp"/>
 
-    <EditText
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_passwordnew"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_newpwd"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="50dp">
+
+    <android.support.design.widget.TextInputEditText
         android:id="@+id/et_newpwd"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_newpwd"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="50dp"
+
         />
+
+            </android.support.design.widget.TextInputLayout>
 
         </RelativeLayout>
 
