--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -33,14 +33,22 @@
         android:layout_marginLeft="10dp"
         android:textSize="15sp"/>
 
-    <EditText
-        android:id="@+id/et_newusername"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_username"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="50dp">
+
+        <EditText
+        android:id="@+id/et_newusername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    </android.support.design.widget.TextInputLayout>
 
     </RelativeLayout>
 
