--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:hint="Username"
         android:layout_below="@+id/imageButton"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="50dp">
 
         <android.support.design.widget.TextInputEditText
@@ -58,15 +58,36 @@
         android:id="@+id/input_layout_password"
         android:layout_below="@+id/input_layout_email"
         android:layout_marginTop="10dp"
-        android:layout_width="270dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:hint="Password"
-        app:passwordToggleEnabled="false"
         >
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:gravity="center"
+            android:paddingTop="30dp"
+
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_passwordconfirm"
+        android:layout_below="@+id/input_layout_password"
+        android:layout_marginTop="10dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:hint="ConfirmPassword"
+        >
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/input_passwordconfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -83,8 +104,8 @@
         android:text="SignUp"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
-        android:layout_below="@+id/input_layout_password"
-        android:layout_alignStart="@+id/input_layout_password"
+        android:layout_below="@+id/input_layout_passwordconfirm"
+        android:layout_alignStart="@+id/input_layout_passwordconfirm"
         android:layout_marginTop="50dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -122,13 +143,7 @@
         android:layout_marginTop="50dp"
         />
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/google_button"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_signup"
-        android:layout_alignStart="@+id/btn_signup"
-        android:layout_marginTop="20dp"/>
+
 
 
 
