--- a/app/src/main/res/layout/activity_highlight_detail.xml
+++ b/app/src/main/res/layout/activity_highlight_detail.xml
@@ -40,7 +40,8 @@
         android:layout_below="@+id/detail_title"
         android:layout_alignParentStart="true"
         android:textColor="@android:color/black"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:autoLink="web"/>
 
 
 
