--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,7 +21,7 @@
         android:id="@+id/input_layout_username"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:hint="Username"
+        android:hint="Username(optional)"
         android:layout_below="@+id/imageButton"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="50dp">
@@ -119,7 +119,7 @@
         app:border_color="@color/white"
         app:border_width="3dp" />
 
-        />
+    />
 
     <TextView
         android:layout_width="wrap_content"
