--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:text="time:"
                 android:id="@+id/tv_time"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="5dp"/>
 
             <ImageView
                 android:id="@+id/icon_title"
@@ -144,13 +145,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Read More>>"
+                android:text="Read More"
                 android:id="@+id/tv_readmore"
                 android:textStyle="bold"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/bt_category"
-                android:layout_marginBottom="30dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="10dp"
                 />
 
 
@@ -178,19 +179,6 @@
     </android.support.v7.widget.CardView>
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="13dp"
-            android:background="@android:color/darker_gray"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="13dp"
-            android:background="@android:color/darker_gray"/>
 
 
 
